--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport-anonymous": "^1.0.1",
     "passport-http": "^0.3.0",
     "redis": "^2.6.2",
-    "underscore": "^1.8.3",
-    "simple-service-registry": "0.1.1"
+    "simple-service-registry": "0.1.1",
+    "socket.io": "^1.4.8",
+    "underscore": "^1.8.3"
   }
 }
